# FitTracker

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  wsl_status.txt
.github/workflows/: ci.yml
deploy/terraform/: main.tf  outputs.tf  variables.tf
docker/: Dockerfile  Dockerfile.prod  docker-compose.yml
docker/init-db/: 01_create_user.sql
docs/: BACKUP_RECOVERY.md  DEPLOYMENT.md  ENVIRONMENT_VARIABLES.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  LOCAL_DEPLOY_CHECKLIST.md  RATE_LIMITS.md  RENDER_DEPLOYMENT.md  RENDER_STAGING_IMPLEMENTATION_PLAN_Version2.md
scripts/: demo.ps1  migrations.py  seed_data.py  smoke_http.ps1  smoke_http.sh  smoke_local.ps1  smoke_local.sh  wait_for_db.py
src/fittrack/: __init__.py  main.py
static/: test_page.html
tests/: conftest.py
tests/factories/: data_factories.py
tests/integration/: test_h2_live.py
tests/unit/: test_activity_flow_e2e.py  test_activity_routes.py  test_admin_users.py  test_analytics.py  test_anti_gaming.py  test_auth_flow_d1.py  test_auth_routes.py  test_auth_service.py  test_base_repository.py  test_config.py  test_connection_routes.py  test_constants.py  test_database_setup.py  test_devonly_f1.py  test_drawing_executor.py  test_drawing_flow_e2e.py  test_drawing_routes.py  test_drawing_service.py  test_drawing_worker.py  test_factories.py  test_fulfillment.py  test_fulfillment_routes.py  test_health_semantics.py  test_leaderboard.py  test_leaderboard_cache.py  test_leaderboard_routes.py  test_me_routes.py  test_normalizer.py  test_notification_routes.py  test_notifications.py  test_points.py  test_points_properties.py  (+19 more)
(+91 files in other folders)
