[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fittrack"
version = "0.1.0"
description = "Gamified fitness platform with sweepstakes rewards"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "oracledb>=2.5.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.18",
    "redis>=5.2.0",
    "passlib[argon2]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.120.0",
    "faker>=33.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["A003", "B008", "UP046"]

[tool.ruff.lint.isort]
known-first-party = ["fittrack"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: marks tests requiring database (deselect with '-m \"not integration\"')",
    "unit: marks unit tests",
]

[tool.coverage.run]
source = ["src/fittrack"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85
